--- a/themes/default/layouts/default.htm
+++ b/themes/default/layouts/default.htm
@@ -17,10 +17,13 @@ code = "mi-estancia"
 
 <?php 
 
-  function onStart()
-  {
-      $this['lang']=\App::getLocale();
-  }
+    function onStart()
+    {
+        $this['lang']=\App::getLocale();
+        if($this['lang']==''){
+            $this['lang']='es';
+        }
+    }
 
 ?>
 
@@ -32,6 +35,7 @@ code = "mi-estancia"
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <title>Cádiz</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="{{url('/')}}/plugins/rainlab/pages/assets/css/style-comarcas.css"/>
     <link rel="stylesheet" href="{{url('/')}}/plugins/rainlab/pages/assets/css/style-village.css"/>
@@ -59,6 +63,9 @@ code = "mi-estancia"
 
     <!-- SCRIPTS -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.5/js/select2.full.min.js"></script>
+    <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/js/script-select2.js"></script>
+
     <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/js/style.js"></script>
    
   </body>
