--- a/themes/default/layouts/home.htm
+++ b/themes/default/layouts/home.htm
@@ -13,12 +13,14 @@ code = "mi-estancia"
 
 <?php 
 
-  function onStart()
-  {
-      $this['lang']=\App::getLocale();
-        $this['experiences'] = $this->staticExperience->experienceList();
-  }
-
+    function onStart()
+    {      
+        $this['lang']=\App::getLocale();
+        if($this['lang']==''){
+            $this['lang']='es';
+        }
+    }
+  
 ?>
 
 ==
@@ -29,10 +31,13 @@ code = "mi-estancia"
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <title>Cádiz</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="{{url('/')}}/plugins/rainlab/pages/assets/css/style-comarcas.css"/>
     <link rel="stylesheet" href="{{url('/')}}/plugins/rainlab/pages/assets/css/style-village.css"/>
     <link rel="stylesheet" href="{{url('/')}}/plugins/rainlab/pages/assets/css/style-event.css"/>
+    <link rel="stylesheet" href="{{url('/')}}/plugins/rainlab/pages/assets/css/style-home.css"/>
+    <link rel="stylesheet" href="{{url('/')}}/plugins/rainlab/pages/assets/css/style-search.css"/>
     <link rel="stylesheet" href="{{url('/')}}/plugins/rainlab/pages/assets/css/style.css"/>
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/svg/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/svg/favicons/favicon-32x32.png">
@@ -59,7 +64,13 @@ code = "mi-estancia"
 
     <!-- SCRIPTS -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.5/js/select2.full.min.js"></script>
+    <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/js/script-select2.js"></script>
+
     <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/js/style.js"></script>
+   
+
+    {% framework %}
    
   </body>
 </html>
