--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -375,7 +375,9 @@ html, body {
 
 .search-exp {
   background: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.68) 100%), url("../img/search-exp.jpg");
-  background-attachment: fixed; }
+  background-attachment: fixed;
+  background-size: cover;
+  }
 
 #searchbar-events {
   background-image: url("../img/events-header.jpg"); }
