--- a/themes/default/partials/experiences.htm
+++ b/themes/default/partials/experiences.htm
@@ -1,5 +1,5 @@
 <div class="search-title-container">
-    <p class="title-search">Hemos encontrado 5 experiencias que se adaptan a ti</p>
+    <p class="title-search">Hemos encontrado {{experiences|length}} experiencias que se adaptan a ti</p>
 </div>
 
 <div class="all-events-container">
