--- a/themes/default/partials/experiences.htm
+++ b/themes/default/partials/experiences.htm
@@ -8,6 +8,7 @@
 	    {% set interest = experience.viewBag.interest|split('-') %}
 	    
 	    <div class="event">
+	    	{{experience.viewBag.cover}}
 	      <div class="overlay-img"></div>
 	      <img class="rec-img" src="{{experience.viewBag.cover}}">
 	      <div class="txt-container">
