--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -1062,13 +1062,13 @@ html.mobile .control-scrollbar {
 
 .control-filelist.filelist-hero ul li > a:hover {
   background: #4ea5e0;
-  border-bottom: 1px solid #4ea5e0 !important; }
+  border-bottom: 1px solid #4ea5e0; }
 
 .control-filelist.filelist-hero ul li > a:hover span.title, .control-filelist.filelist-hero ul li > a:hover span.description {
-  color: #ffffff !important; }
+  color: #ffffff; }
 
 .control-filelist.filelist-hero ul li > a:hover .list-icon {
-  color: #ffffff !important; }
+  color: #ffffff; }
 
 .control-filelist.filelist-hero ul li > a:active {
   background: #3498db;
@@ -4801,6 +4801,9 @@ body.outer .layout > .layout-row > .layout-cell .outer-form-container .forgot-pa
 input:-webkit-autofill {
   -webkit-box-shadow: 0 0 0px 1000px white inset !important; }
 
+.btn {
+  box-shadow: none !important; }
+
 nav#layout-mainmenu {
   padding: 0px; }
   nav#layout-mainmenu .active {
@@ -4836,7 +4839,8 @@ nav#layout-mainmenu.navbar-mode-inline ul.mainmenu-nav li:first-child {
   margin-left: 0px; }
 
 .layout-sidenav-container {
-  width: 100px; }
+  width: 100px;
+  background-color: #175DA3; }
 
 #layout-sidenav .active {
   background-color: #0C5095; }
@@ -4865,3 +4869,88 @@ nav#layout-mainmenu.navbar-mode-inline ul.mainmenu-nav li:first-child {
 #layout-sidenav ul li:first-child a {
   padding-top: 20px;
   padding-bottom: 20px; }
+
+/* MENÚ */
+.w-350 {
+  width: 308px !important; }
+  .w-350 .control-scrollbar {
+    background-color: #CECECE; }
+    .w-350 .control-scrollbar div, .w-350 .control-scrollbar li, .w-350 .control-scrollbar a {
+      height: 70px; }
+
+.form-control.icon.search {
+  background-image: url("../images/search-icon.svg");
+  background-position: 94% 50% !important; }
+
+/* ICONS CHANGE */
+.oc-icon-plus {
+  background-image: url("../images/add-icon.svg");
+  background-repeat: no-repeat;
+  background-position: 8px 50%; }
+  .oc-icon-plus:before {
+    content: ''; }
+
+.oc-icon-upload:before, .icon-upload:before {
+  content: url("../images/upload-icon.svg");
+  opacity: 1 !important;
+  margin-top: 1px; }
+
+.oc-icon-folder:before, .icon-folder:before {
+  content: url("../images/new-folder.svg");
+  opacity: 1 !important; }
+
+.oc-icon-refresh:before, .icon-refresh:before {
+  content: url("../images/reload-icon.svg");
+  opacity: 1 !important; }
+
+.oc-icon-mail-reply-all:before, .icon-mail-reply-all:before, .oc-icon-reply-all:before, .icon-reply-all:before {
+  content: url("../images/move-icon.svg");
+  opacity: 1 !important;
+  margin-top: 2px; }
+
+.oc-icon-trash:before, .icon-trash:before {
+  content: url("../images/trash-icon.svg");
+  opacity: 1 !important; }
+
+.oc-icon-align-justify:before, .icon-align-justify:before {
+  content: url("../images/list1.svg");
+  opacity: 1 !important;
+  margin-top: 1px; }
+
+.oc-icon-th:before, .icon-th:before {
+  content: url("../images/list2.svg");
+  opacity: 1 !important;
+  margin-top: -1px; }
+
+.oc-icon-th-large:before, .icon-th-large:before {
+  content: url("../images/list3.svg");
+  opacity: 1 !important; }
+
+[class^="oc-icon-"].empty:before, [class*=" oc-icon-"].empty:before {
+  margin-right: -2px; }
+
+.control-filelist.filelist-hero ul li > a {
+  background-color: #F6F6F6; }
+
+#layout-side-panel div.control-toolbar.separator, .compact-toolbar div.control-toolbar.separator {
+  border-bottom: 1px solid #818181; }
+
+/* MEDIA */
+.control-toolbar .toolbar-item .btn-group > .btn, .control-toolbar .toolbar-item .btn-group > .dropdown, .control-toolbar .toolbar-item .btn-group + .oc-icon-refresh {
+  height: 50px;
+  background-color: #175DA3;
+  color: white;
+  font-weight: 500;
+  font-size: 14px;
+  display: -moz-inline-box;
+  display: -ms-inline-flexbox;
+  display: -webkit-inline-flex;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.3s ease; }
+  .control-toolbar .toolbar-item .btn-group > .btn:hover, .control-toolbar .toolbar-item .btn-group > .dropdown:hover, .control-toolbar .toolbar-item .btn-group + .oc-icon-refresh:hover {
+    background-color: #2E98CE; }
+
+.btn-group .btn {
+  border-right: 1px solid #FFFFFF; }
