--- a/plugins/rainlab/pages/widgets/pagelist/partials/_treebranch.htm
+++ b/plugins/rainlab/pages/widgets/pagelist/partials/_treebranch.htm
@@ -29,7 +29,10 @@
             <div>
                 <a href="#">
                     <?= e($pageObj->page->getViewBag()->property('title')) ?>
-                    <span class="comment"><?= e($pageObj->page->getViewBag()->property('url')) ?></span>
+                    <!-- Andrés Martínez
+                        Hidden url at list
+                    -->
+                     <!-- <span class="comment"><?= e($pageObj->page->getViewBag()->property('url')) ?></span> -->
                 </a>
 
                 <input type="hidden" name="object[<?= e($fileName) ?>]" value="0"/>
@@ -37,7 +40,7 @@
                 <!-- Andrés Martínez
                     Hidden checkbox selct to delete on Parents
                 -->
-                <?php if ($fileName != 'municipios' && $fileName != 'comarcas') : ?>
+                <?php if ($fileName != 'municipios' && $fileName != 'comarcas' && $fileName != 'playas' && $fileName != 'naturaleza') : ?>
                     <div class="checkbox custom-checkbox nolabel">
                         <input
                             id="<?= $cbId ?>"
@@ -53,7 +56,7 @@
                  <!-- Andrés Martínez
                     Hidden add subpage. Only for Parents
                 -->
-                <?php if ($fileName == 'municipios' || $fileName == 'comarcas') : ?>
+                <?php if ($fileName == 'municipios' || $fileName == 'comarcas' || $fileName == 'playas' || $fileName == 'naturaleza') : ?>
                     <ul class="submenu">
                         <li>
                             <a
