--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -1289,14 +1289,9 @@ nav#layout-mainmenu.navbar-mode-inline ul.mainmenu-nav li:first-child {
   width: 308px !important;
   .control-scrollbar {
       background-color: #CECECE;
-      div, li, a {
-        height: 70px;
-      }
-      a {
-        color: #818181;
-        font-weight: 600;
-        font-size: 14px;
-      }
+      // div, li, a {
+      //   height: 70px;
+      // }
   }
   .form-control.icon.search {
     background-image: url('../images/search-icon.svg');
@@ -1308,6 +1303,23 @@ nav#layout-mainmenu.navbar-mode-inline ul.mainmenu-nav li:first-child {
 }
 .control-treeview ol > li > div {
   background: #F6F6F6;
+  a {
+    color: #818181;
+    font-weight: 600;
+    font-size: 14px;
+    @include flexbox();
+    align-items: center;
+    background-image: url('../images/file-icon.svg');
+    background-size: 16px 18px !important;
+    background-position: 10px 50%;
+    background-repeat: no-repeat;
+    padding-left: 34px;
+    line-height: 14px;
+  }
+}
+
+.control-treeview ol > li > div > ul.submenu li a {
+  background-image: none !important;
 }
 
 .control-treeview {
@@ -1321,16 +1333,9 @@ nav#layout-mainmenu.navbar-mode-inline ul.mainmenu-nav li:first-child {
   }
 
   ol > li > div:before {
-    background-image: url('../images/file-icon.svg');
-    background-size: 16px 18px !important;
-    background-position: 2px 50%;
+    content: none;
   }
 
-}
-
-.control-filelist {
- li.active {
- }
 }
 
 /* ICONS CHANGE */
