--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -1315,6 +1315,8 @@ nav#layout-mainmenu.navbar-mode-inline ul.mainmenu-nav li:first-child {
     background-repeat: no-repeat;
     padding-left: 34px;
     line-height: 14px;
+    padding-top: 28px;
+    padding-bottom: 28px;
   }
 }
 
