--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5163,6 +5163,12 @@ div.panel h3.section {
 .tab-content .custom-checkbox input[type=checkbox]:checked + label:before, .tab-content .custom-radio input[type=checkbox]:checked + label:before {
   color: #818181 !important; }
 
+.dropdown-menu .dropdown-container > ul li a:hover, .dropdown-menu .dropdown-container > ul li a:focus {
+  background-color: #175DA3; }
+
+.dropdown-menu .dropdown-container > ul li.first-item a:hover:after, .dropdown-menu .dropdown-container > ul li.first-item a:focus:after, .dropdown-menu .dropdown-container > ul li.first-item a:active:after {
+  border-bottom: 8px solid #175DA3 !important; }
+
 .compact-container label {
   color: #818181; }
 
