--- a/plugins/rainlab/pages/assets/css/style-event.css
+++ b/plugins/rainlab/pages/assets/css/style-event.css
@@ -145,10 +145,7 @@
 .event-features {
   width: 100%;
   height: 179px;
-  background-image: url("../svg/oval-black.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  background: linear-gradient(180deg, transparent 50%, #FFFFFF 50%);
   position: absolute;
   bottom: -13%;
   z-index: 10;
@@ -244,6 +241,18 @@
       text-decoration: none;
       position: absolute;
       top: 70px; }
+
+.event-features::after {
+  content: '';
+  height: 100%;
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  background-image: url("../svg/oval-black.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  z-index: -1; }
 
 /* TXT SECTION - EVENTS */
 .header-event + .section-txt, .header-ruta + .section-txt {
