--- a/themes/default/layouts/dinamic.htm
+++ b/themes/default/layouts/dinamic.htm
@@ -19,6 +19,19 @@ code = "mi-estancia"
         if($this['lang']==''){
             $this['lang']='es';
         }
+
+        if($this['lang'] == 'es'){
+            $this['menulang'] = 'nombrees';
+        } elseif ($this['lang'] == 'en') {
+            $this['menulang'] = 'nombreen';
+        } elseif ($this['lang'] == 'fr') {
+            $this['menulang'] = 'nombrefr';
+        } elseif ($this['lang'] == 'de') {
+            $this['menulang'] = 'nombrede';
+        } elseif ($this['lang'] == 'ru') {
+            $this['menulang'] = 'nombreru';
+        }
+        
     }
   
 ?>
