--- a/themes/default/partials/site/header.htm
+++ b/themes/default/partials/site/header.htm
@@ -11,10 +11,8 @@
             <img class="separator-tiny" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/tiny-separator.svg">
             <ul class="menu-ul donde-ul">
               {% for item in staticMenu.menuItems %}
-                <li class="menu-item"><a href="{{ item.url }}">{{ item.viewBag.nombrees }}</a></li>
+                <li class="menu-item"><a href="{{ item.url }}">{{ item.viewBag[menulang] }}</a></li>                
               {% endfor %}
-              <li class="menu-item"><a href="{{url('/')}}/{{lang}}/comarcas">{{'Todas las comarcas'|_}}</a></li>
-              <li class="menu-item"><a href="{{url('/')}}/{{lang}}/municipios">{{'Todos los municipios'|_}}</a></li>
             </ul>
             <ul class="menu-mobile">
               <li class="menu-item"><a href="{{url('/')}}/{{lang}}/comarcas">{{'Comarcas'|_}}</a></li>
