--- a/plugins/rainlab/pages/assets/scss/style-event.scss
+++ b/plugins/rainlab/pages/assets/scss/style-event.scss
@@ -46,6 +46,7 @@
     margin-bottom: 50px;
     .brush {
       margin-top: -14px;
+      margin-bottom: 150px;
     }
     .txt {
       font-size: 144px;
@@ -63,6 +64,53 @@
     @include flexbox();
     align-items: center;
     justify-content: center;
+    .button-send-info {
+      width: 348px;
+      height: 70px;
+      background-color: #F5A623;
+      border-radius: 4px;
+      @include flexbox();
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+      a {
+        color: white;
+        font-weight: 300;
+        font-size: 19px;
+        line-height: 27px;
+        padding: 22px 20px;
+        &:hover, &:focus, &:active {
+          text-decoration: none;
+          outline: none;
+          background-color: transparent;
+        }
+      }
+      &:hover {
+        background-color: #D0860C;
+      }
+    }
+  }
+}
+
+.send-info-container {
+  height: 969px;
+  width: 100%;
+  @include flexbox();
+  justify-content: center;
+  position: absolute;
+  top: 0px;
+  .send-info {
+    width: 391px;
+    height: 105px;
+    background-color: rgba(0,0,0,0.18);
+    border-radius: 5px;
+    @include flexbox();
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    bottom: 200px;
+    z-index: 999;
     .button-send-info {
       width: 348px;
       height: 70px;
