--- a/themes/default/layouts/experience.htm
+++ b/themes/default/layouts/experience.htm
@@ -15,7 +15,7 @@ code = "mi-estancia"
 
 ==
 
-<?php 
+<?php
 
     function onStart()
     {
@@ -49,7 +49,7 @@ code = "mi-estancia"
     <meta name="theme-color" content="#ffffff">
 </head>
 
-    {% partial 'site/header' %}
+    {% partial 'site/headerexp' %}
 
     {% component 'staticPage' %}
 
@@ -67,6 +67,6 @@ code = "mi-estancia"
     <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/js/script-select2.js"></script>
 
     <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/js/style.js"></script>
-   
+
   </body>
 </html>
