--- a/themes/default/partials/site/header.htm
+++ b/themes/default/partials/site/header.htm
@@ -1,3 +1,25 @@
+==
+
+<?php 
+
+    function onStart()
+    {   
+        if($this['lang'] == 'es'){
+            $this['menulang'] = 'nombrees';
+        } elseif ($this['lang'] == 'en') {
+            $this['menulang'] = 'nombreen';
+        } elseif ($this['lang'] == 'fr') {
+            $this['menulang'] = 'nombrefr';
+        } elseif ($this['lang'] == 'de') {
+            $this['menulang'] = 'nombrede';
+        } elseif ($this['lang'] == 'ru') {
+            $this['menulang'] = 'nombreru';
+        }        
+    }
+  
+?>
+
+==
 <!-- MENU-->
     <div class="slidemenu">
       <div class="elements">
@@ -10,7 +32,10 @@
             <img class="separator separator-menu" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/big-yellow-separator.svg">
             <img class="separator-tiny" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/tiny-separator.svg">
             <ul class="menu-ul donde-ul">
-              {% for item in staticMenu.menuItems %}
+              {% for item in staticMenu.menuItems %}              
+                {% if item.viewBag[menulang] == '' %}
+                {% set menulang = 'nombrees' %}
+                {% endif %}
                 <li class="menu-item"><a href="{{ item.url }}">{{ item.viewBag[menulang] }}</a></li>                
               {% endfor %}
             </ul>
@@ -24,12 +49,12 @@
             <img class="separator separator-menu" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/big-yellow-separator.svg">
             <img class="separator-tiny" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/tiny-separator.svg">
             <ul class="menu-ul">
-              <li class="menu-item"><a href="{{url('/')}}/{{lang}}/playas">Playas</a></li>
-              <li class="menu-item"><a href="{{url('/')}}/{{lang}}/rutas">Rutas</a></li>
-              <li class="menu-item"><a href="{{url('/')}}/{{lang}}/naturaleza">Naturaleza</a></li>
-              <li class="menu-item"><a href="{{url('/')}}/{{lang}}/diversion">Diversión</a></li>
-              <li class="menu-item"><a href="{{url('/')}}/{{lang}}/cultura">Cultura</a></li>
-              <li class="menu-item"><a href="{{url('/')}}/{{lang}}/gastronomia">Gastronomía</a></li>
+              {% for item in staticMenu4.menuItems %}
+                {% if item.viewBag[menulang] == '' %}
+                {% set menulang = 'nombrees' %}
+                {% endif %}
+                <li class="menu-item"><a href="{{ item.url }}">{{ item.viewBag[menulang] }}</a></li>                
+              {% endfor %}
             </ul>
           </div>
           <div class="menu-list">
