--- a/plugins/rainlab/pages/assets/css/style-event.css
+++ b/plugins/rainlab/pages/assets/css/style-event.css
@@ -607,6 +607,52 @@
     .icons-row .also-feature:last-child {
       margin-right: 0px; }
 
+/* Modal */
+#modal-exp {
+  max-width: 660px; }
+  #modal-exp .modal-container {
+    width: 90%;
+    height: 100%;
+    max-width: 340px;
+    margin: 0 auto;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column; }
+    #modal-exp .modal-container img {
+      padding-top: 75px; }
+    #modal-exp .modal-container h3 {
+      text-align: center;
+      font-family: 'AvenirNext-DemiBold';
+      color: #4A4A4A;
+      font-size: 30px;
+      line-height: 35px; }
+    #modal-exp .modal-container p {
+      color: #9B9B9B;
+      font-size: 16px;
+      line-height: 22px;
+      text-align: center; }
+    #modal-exp .modal-container form {
+      width: 100%;
+      display: -webkit-box;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      flex-direction: column; }
+      #modal-exp .modal-container form input {
+        width: 100%;
+        height: 57px; }
+      #modal-exp .modal-container form input[type="email"] {
+        background-color: rgba(206, 206, 206, 0.3);
+        color: #cecece;
+        font-size: 16px;
+        padding-left: 20px; }
+
 /* IMG SECTION - EVENTS */
 .section-img {
   width: 100%;
