--- a/plugins/rainlab/pages/assets/scss/style-event.scss
+++ b/plugins/rainlab/pages/assets/scss/style-event.scss
@@ -609,6 +609,51 @@
   }
 }
 
+/* Modal */
+#modal-exp {
+  max-width: 660px;
+  .modal-container {
+    width: 90%;
+    height: 100%;
+    max-width: 340px;
+    margin: 0 auto;
+    @include flexbox();
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    img {
+      padding-top: 75px;
+    }
+    h3 {
+      text-align: center;
+      font-family: 'AvenirNext-DemiBold';
+      color: #4A4A4A;
+      font-size: 30px;
+      line-height: 35px;
+    }
+    p {
+      color: #9B9B9B;
+      font-size: 16px;
+      line-height: 22px;
+      text-align: center;
+    }
+    form {
+      width: 100%;
+      @include flexbox();
+      flex-direction: column;
+      input {
+        width: 100%;
+        height: 57px;
+      }
+      input[type="email"] {
+        background-color: rgba(206,206,206, 0.3);
+        color: #cecece;
+        font-size: 16px;
+        padding-left: 20px;
+      }
+    }
+  }
+}
 
 /* IMG SECTION - EVENTS */
 .section-img {
