--- a/themes/default/layouts/experience.htm
+++ b/themes/default/layouts/experience.htm
@@ -13,6 +13,11 @@ code = "que-vivir"
 [staticMenu staticMenu3]
 code = "mi-estancia"
 
+[staticMenu staticMenu4]
+code = "que-hacer"
+
+[staticApp]
+
 ==
 
 <?php
