--- a/themes/default/layouts/playa.htm
+++ b/themes/default/layouts/playa.htm
@@ -13,6 +13,9 @@ code = "que-vivir"
 [staticMenu staticMenu3]
 code = "mi-estancia"
 
+[staticMenu staticMenu4]
+code = "que-hacer"
+
 [staticApp]
 
 ==
@@ -27,8 +30,7 @@ code = "mi-estancia"
         }
 
         $this['experiences'] = $this->staticApp->experienceList();
-
-      
+     
     }
 
 ?>
