--- a/themes/default/layouts/municipio.htm
+++ b/themes/default/layouts/municipio.htm
@@ -13,6 +13,9 @@ code = "que-vivir"
 [staticMenu staticMenu3]
 code = "mi-estancia"
 
+[staticMenu staticMenu4]
+code = "que-hacer"
+
 [staticApp]
 
 ==
@@ -28,7 +31,6 @@ code = "mi-estancia"
 
         $this['experiences'] = $this->staticApp->experienceList();
 
-      
     }
 
 ?>
