--- a/themes/default/partials/site/header.htm
+++ b/themes/default/partials/site/header.htm
@@ -6,14 +6,19 @@
     {   
         if($this['lang'] == 'es'){
             $this['menulang'] = 'nombrees';
+            $this['allEvents'] = 'Todos los eventos';
         } elseif ($this['lang'] == 'en') {
             $this['menulang'] = 'nombreen';
+            $this['allEvents'] = 'All events';
         } elseif ($this['lang'] == 'fr') {
             $this['menulang'] = 'nombrefr';
+            $this['allEvents'] = 'Todos los eventos';
         } elseif ($this['lang'] == 'de') {
             $this['menulang'] = 'nombrede';
+            $this['allEvents'] = 'Todos los eventos';
         } elseif ($this['lang'] == 'ru') {
             $this['menulang'] = 'nombreru';
+            $this['allEvents'] = 'Todos los eventos';
         }        
     }
   
@@ -63,9 +68,12 @@
             <img class="separator-tiny" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/tiny-separator.svg">
             <ul class="menu-ul">
               {% for item in staticMenu2.menuItems %}
-                <li class="menu-item"><a href="{{ item.url }}">{{ item.title }}</a></li>
+                {% if item.viewBag[menulang] == '' %}
+                {% set menulang = 'nombrees' %}
+                {% endif %}
+                <li class="menu-item"><a href="{{ item.url }}">{{ item.viewBag[menulang] }}</a></li>                 
               {% endfor %}
-              <li class="menu-item"><a href="{{url('/')}}/{{lang}}/eventos">{{'Todos los eventos'|_}}</a></li>
+                <li class="menu-item"><a href="/eventos">{{ allEvents }}</a></li>
             </ul>
           </div>
           <div class="menu-list">
@@ -74,7 +82,10 @@
             <img class="separator-tiny" src="{{url('/')}}/plugins/rainlab/pages/assets/svg/tiny-separator.svg">
             <ul class="menu-ul">
               {% for item in staticMenu3.menuItems %}
-                <li class="menu-item"><a href="{{ item.url }}">{{ item.title }}</a></li>
+                {% if item.viewBag[menulang] == '' %}
+                {% set menulang = 'nombrees' %}
+                {% endif %}
+                <li class="menu-item"><a href="{{ item.url }}">{{ item.viewBag[menulang] }}</a></li> 
               {% endfor %}
             </ul>
           </div>
