--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -4906,8 +4906,8 @@ nav#layout-mainmenu.navbar-mode-inline ul.mainmenu-nav li:first-child {
   color: #818181 !important; }
 
 .control-treeview ol > li.dragged div, .control-treeview ol > li > div:hover {
-  background-color: #175DA3 !important;
-  border-bottom: 1px solid #175DA3 !important; }
+  background-color: #818181 !important;
+  border-bottom: 1px solid #818181 !important; }
 
 .control-treeview ol > li > div > span.drag-handle {
   right: 7.5px !important;
@@ -4916,8 +4916,8 @@ nav#layout-mainmenu.navbar-mode-inline ul.mainmenu-nav li:first-child {
     font-size: 14px !important; }
 
 .control-filelist.filelist-hero ul li > a:active, .control-filelist.filelist-hero ul li > a:hover {
-  background: #175DA3;
-  border-bottom: 1px solid #175DA3; }
+  background: #818181;
+  border-bottom: 1px solid #818181; }
 
 .control-treeview.treeview-light ol > li > div > a {
   padding-top: 20px !important;
@@ -5033,6 +5033,45 @@ nav#layout-mainmenu.navbar-mode-inline ul.mainmenu-nav li:first-child {
   height: 50px !important;
   border: none;
   font-size: 11px; }
+
+.control-treeview ol > li > ol > li.active > div:before {
+  background-position: 0px -80px !important; }
+
+.control-treeview ol > li.has-subitems.active > div:before {
+  background-position: 0px -52px !important; }
+
+.control-treeview ol > li.active > div:after, .control-filelist.filelist-hero ul li.active > a:after {
+  content: none !important; }
+
+.item-title {
+  color: #818181; }
+  .item-title .oc-icon-folder:before, .item-title .icon-folder:before {
+    -webkit-filter: contrast(4.7) invert(0.4);
+    -moz-filter: contrast(4.7) invert(0.4);
+    filter: contrast(4.7) invert(0.4); }
+
+table.table.data tbody tr.rowlink:hover td, table.table.data tbody tr:not(.no-data).selected td,
+div[data-control="media-manager"] .list-container table.table.data tbody tr:not(.no-data):active td {
+  background: #F6F6F6 !important;
+  color: #818181 !important; }
+  table.table.data tbody tr.rowlink:hover td .oc-icon-folder:before, table.table.data tbody tr.rowlink:hover td .icon-folder:before, table.table.data tbody tr:not(.no-data).selected td .oc-icon-folder:before, table.table.data tbody tr:not(.no-data).selected td .icon-folder:before,
+  div[data-control="media-manager"] .list-container table.table.data tbody tr:not(.no-data):active td .oc-icon-folder:before,
+  div[data-control="media-manager"] .list-container table.table.data tbody tr:not(.no-data):active td .icon-folder:before {
+    -webkit-filter: contrast(4.7) invert(0.4);
+    -moz-filter: contrast(4.7) invert(0.4);
+    filter: contrast(4.7) invert(0.4); }
+
+.control-filelist.filelist-hero ul li.active > a, .control-treeview ol > li.active > div {
+  background-color: #818181;
+  color: white !important; }
+  .control-filelist.filelist-hero ul li.active > a a, .control-filelist.filelist-hero ul li.active > a span, .control-treeview ol > li.active > div a, .control-treeview ol > li.active > div span {
+    color: white !important; }
+
+.control-filelist.menu-list li.active > a:before {
+  background-position: 0 -60px !important; }
+
+.control-scrollbar.vertical > .scrollbar-scrollbar {
+  margin-right: 0px !important; }
 
 /* MEDIA */
 .control-toolbar.toolbar-padded .toolbar-item .btn-group > .btn, .control-toolbar.toolbar-padded .toolbar-item .btn-group > .dropdown, .control-toolbar.toolbar-padded .toolbar-item .btn-group + .oc-icon-refresh {
