--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -1336,8 +1336,8 @@ nav#layout-mainmenu.navbar-mode-inline ul.mainmenu-nav li:first-child {
 }
 
 .control-treeview ol > li.dragged div, .control-treeview ol > li > div:hover {
-  background-color: $blue !important;
-  border-bottom: 1px solid $blue !important;
+  background-color: #818181 !important;
+  border-bottom: 1px solid #818181 !important;
 }
 
 .control-treeview ol > li > div > span.drag-handle {
@@ -1349,8 +1349,8 @@ nav#layout-mainmenu.navbar-mode-inline ul.mainmenu-nav li:first-child {
 }
 
 .control-filelist.filelist-hero ul li > a:active, .control-filelist.filelist-hero ul li > a:hover {
-  background: $blue;
-  border-bottom: 1px solid $blue;
+  background: #818181;
+  border-bottom: 1px solid #818181;
 }
 
 .control-treeview.treeview-light ol > li > div > a {
@@ -1488,6 +1488,54 @@ nav#layout-mainmenu.navbar-mode-inline ul.mainmenu-nav li:first-child {
   height: 50px !important;
   border: none;
   font-size: 11px;
+}
+
+.control-treeview ol > li > ol > li.active > div:before {
+  background-position: 0px -80px !important;
+}
+
+.control-treeview ol > li.has-subitems.active > div:before {
+  background-position: 0px -52px !important;
+}
+
+.control-treeview ol > li.active > div:after, .control-filelist.filelist-hero ul li.active > a:after {
+  content: none !important;
+}
+
+.item-title {
+  color: #818181;
+  .oc-icon-folder:before, .icon-folder:before {
+    -webkit-filter: contrast(4.7) invert(0.4);
+    -moz-filter: contrast(4.7) invert(0.4);
+    filter: contrast(4.7) invert(0.4);
+  }
+}
+
+table.table.data tbody tr.rowlink:hover td, table.table.data tbody tr:not(.no-data).selected td,
+div[data-control="media-manager"] .list-container table.table.data tbody tr:not(.no-data):active td {
+  background: #F6F6F6 !important;
+  color: #818181 !important;
+  .oc-icon-folder:before, .icon-folder:before {
+    -webkit-filter: contrast(4.7) invert(0.4);
+    -moz-filter: contrast(4.7) invert(0.4);
+    filter: contrast(4.7) invert(0.4);
+  }
+}
+
+.control-filelist.filelist-hero ul li.active > a, .control-treeview ol > li.active > div {
+  background-color: #818181;
+  color: white !important;
+  a,span {
+    color: white !important;
+  }
+}
+
+.control-filelist.menu-list li.active > a:before {
+  background-position: 0 -60px !important;
+}
+
+.control-scrollbar.vertical > .scrollbar-scrollbar {
+  margin-right: 0px !important;
 }
 
 /* MEDIA */
