--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -1578,6 +1578,23 @@ div.panel h3.section {
 .nav.selector-group li a {
   color: #CECECE;
 }
+
+table.name-value-list > a {
+  &:hover, &:focus, &:active {
+    color: $blue;
+    text-decoration: none;
+    outline: none;
+  }
+}
+
+.widget-field {
+  input[type="text"], textarea {
+    background-color: #CECECE !important;
+    border: none !important;
+    color: #818181 !important;
+  }
+}
+
 // table.table.data tbody tr.rowlink:hover td, table.table.data tbody tr:not(.no-data).selected td {background-color: $blue !important;}
 #MediaManager-manager-filters ~ .sidebar-group {
   .select2-container--default .select2-selection--single {
