--- a/modules/backend/assets/scss/october.scss
+++ b/modules/backend/assets/scss/october.scss
@@ -1537,6 +1537,10 @@ div[data-control="media-manager"] .list-container table.table.data tbody tr:not(
   background-position: 0 -60px !important;
 }
 
+.control-treeview ol > li.active > div:before {
+  background-position: 0 -80px !important;
+}
+
 .control-scrollbar.vertical > .scrollbar-scrollbar {
   margin-right: 0px !important;
 }
